2018-11-15 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

		* add function time_stamp

2018-11-12 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

		* rename function format_filenames params 'prefix>suffix;profix>prefix'

2018-03-10 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

		* add ANNOVAR create_index.pl in inst/extdata/tools/annovar

2018-01-25 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

		* add ggsci package collected colors

2018-01-19 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

		* add rbash tool in inst/extdata/tools

2018-01-17 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

		* add supress_any_message R/log.R
		* add tools deseq2

2017-12-03 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

		* add tolower and toupper in format_filenames
		* fix start_index length problem
		* when i != 1, set extra_fread_prams header to FALSE
		* parameter start_index be added in batch_file function

2017-11-21 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

		* rename all hander to handler and mhander to mhandler
		* add function batch_file in R/utils.R

2017-11-21 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

		* split_list be added in R/split.R
		* param use_system_split be added in split_row_file

2017-11-20 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

		* get_split_seqs, split_row_data split_row_file, 
		and split_col_data be added in R/split.R
		* rename R/file.R to R/merge.R

2017-11-18 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

		* get_files_mtime and get_files_ctime be added in R/log.R 

2017-11-08 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
		* vignettes be added

2017-11-07 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
		* merge_table_files be added
		* reduce qualityconfirm size

2017-10-13 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
		* gvmap be added in inst/extdata/tools/

2017-10-11 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
		* control flag be added in extra_params of hander and mhander
		* QualityConfirm be added in inst/extdata/tools/

2017-10-10 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>