@@ -17,6 +17,7 @@ export(merge_table_files)
 export(muts2mutation_mapper)
 export(muts2oncoprinter)
 export(muts2pp)
+export(par_download)
 export(set_colors)
 export(set_tools)
 export(show_handlers)
@@ -29,5 +30,7 @@ export(supress_any_message)
 export(time_stamp)
 import(configr)
 import(data.table)
+import(future)
 import(stringr)
 import(utils)
+importFrom(stringi,stri_rand_strings)
