@@ -12,5 +12,6 @@
 #'
 #' @docType package
 #' @name ngstk
-#' @import stringr configr utils data.table
+#' @import stringr configr utils data.table future
+#' @importFrom stringi stri_rand_strings
 NULL
