@@ -1,6 +1,7 @@
 2018-11-15 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
 		* add function time_stamp
+		* add function par_download
 
 2018-11-12 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
